--- a/LearningMVC/packages.config
+++ b/LearningMVC/packages.config
@@ -95,6 +95,7 @@
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
   <package id="popper.js" version="1.14.3" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.ComponentModel.Primitives" version="4.1.0" targetFramework="net461" />
   <package id="System.ComponentModel.TypeConverter" version="4.1.0" targetFramework="net461" />
