--- a/LearningMVC.Tests/packages.config
+++ b/LearningMVC.Tests/packages.config
@@ -1,10 +1,95 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
+  <package id="Autofac" version="4.0.1" targetFramework="net461" />
+  <package id="Autofac.Extras.Moq" version="4.2.0" targetFramework="net461" />
+  <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
+  <package id="elmah" version="1.2.2" targetFramework="net461" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net461" />
+  <package id="Elmah.Mvc" version="2.1.2" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="FluentAssertions" version="5.4.2" targetFramework="net461" />
+  <package id="FluentAssertions.Json" version="5.0.0" targetFramework="net461" />
+  <package id="jQuery" version="3.3.1" targetFramework="net461" />
+  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
+  <package id="knockoutjs" version="3.4.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Authentication.Core" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Authorization" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Authorization.Policy" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Cors" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Extensions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.1.2" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Mvc.Core" version="2.1.2" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Mvc.Cors" version="2.1.2" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Routing" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyModel" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.ObjectPool" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.5" targetFramework="net461" />
+  <package id="Microsoft.Net.Http.Headers" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
-  <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
-  <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Microsoft.Web.Xdt" version="2.1.2" targetFramework="net461" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net461" />
+  <package id="Moq" version="4.10.0" targetFramework="net461" />
+  <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
+  <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="NUnit" version="3.10.1" targetFramework="net461" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
+  <package id="System.ComponentModel.Primitives" version="4.1.0" targetFramework="net461" />
+  <package id="System.ComponentModel.TypeConverter" version="4.1.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net461" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="WebApiContrib.Formatting.Jsonp" version="3.0.2" targetFramework="net461" />
+  <package id="WebMatrix.Data" version="2.0.30506.0" targetFramework="net461" />
+  <package id="WebMatrix.WebData" version="2.0.30506.0" targetFramework="net461" />
+  <package id="X.PagedList" version="7.5.0" targetFramework="net461" />
+  <package id="X.PagedList.Mvc" version="7.5.0" targetFramework="net461" />
+  <package id="X.PagedList.Mvc.Bootstrap4" version="7.5.0" targetFramework="net461" />
+  <package id="xunit" version="2.4.0" targetFramework="net461" />
+  <package id="xunit.abstractions" version="2.0.2" targetFramework="net461" />
+  <package id="xunit.analyzers" version="0.10.0" targetFramework="net461" />
+  <package id="xunit.assert" version="2.4.0" targetFramework="net461" />
+  <package id="xunit.core" version="2.4.0" targetFramework="net461" />
+  <package id="xunit.extensibility.core" version="2.4.0" targetFramework="net461" />
+  <package id="xunit.extensibility.execution" version="2.4.0" targetFramework="net461" />
+  <package id="xunit.runner.console" version="2.4.0" targetFramework="net461" developmentDependency="true" />
 </packages>
