--- a/LearningMVC/LearningMVC.csproj
+++ b/LearningMVC/LearningMVC.csproj
@@ -254,6 +254,9 @@
     <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
       <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
@@ -408,6 +411,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AJAXController.cs" />
+    <Compile Include="Controllers\CSharpSevenController.cs" />
     <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\DI_TestController.cs" />
     <Compile Include="Controllers\EFDataController.cs" />
@@ -424,6 +428,7 @@
     <Compile Include="Controllers\Web API\BaseApiController.cs" />
     <Compile Include="Controllers\Web API\FoodsController.cs" />
     <Compile Include="Controllers\Web API\TokenController.cs" />
+    <Compile Include="Data\DI_Repostitory.cs" />
     <Compile Include="Data\Web Api\IUserRepository.cs" />
     <Compile Include="Data\Web Api\User.cs" />
     <Compile Include="Data\Web Api\UserRepository.cs" />
@@ -688,6 +693,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\CSharpSeven\" />
     <Folder Include="Views\RequireHttpsAttribute\" />
   </ItemGroup>
   <ItemGroup>
