--- a/LearningMVC/LearningMVC.csproj
+++ b/LearningMVC/LearningMVC.csproj
@@ -415,6 +415,7 @@
     <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\DI_TestController.cs" />
     <Compile Include="Controllers\EFDataController.cs" />
+    <Compile Include="Controllers\ES6Controller.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InfrastructureController.cs" />
     <Compile Include="Controllers\LogonController.cs" />
@@ -540,6 +541,7 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="Scripts\ES6\ES6.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
     <Content Include="Scripts\esm\popper-utils.min.js" />
     <Content Include="Scripts\esm\popper.js" />
@@ -690,9 +692,11 @@
     <Content Include="Views\DI_Test\DI_Test.cshtml" />
     <Content Include="Views\TypeScriptTest\TypeScriptTest.cshtml" />
     <Content Include="Views\Foods\Foods.cshtml" />
+    <Content Include="Views\ES6\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="obj\" />
     <Folder Include="Views\CSharpSeven\" />
     <Folder Include="Views\RequireHttpsAttribute\" />
   </ItemGroup>
